@@ -1004,23 +1004,24 @@ hwloc_topology_dup(hwloc_topology_t *newp,
 static const unsigned obj_type_order[] = {
     /* first entry is HWLOC_OBJ_MACHINE */  0,
     /* next entry is HWLOC_OBJ_PACKAGE */  4,
-    /* next entry is HWLOC_OBJ_CORE */     13,
-    /* next entry is HWLOC_OBJ_PU */       17,
-    /* next entry is HWLOC_OBJ_L1CACHE */  11,
-    /* next entry is HWLOC_OBJ_L2CACHE */  9,
-    /* next entry is HWLOC_OBJ_L3CACHE */  7,
-    /* next entry is HWLOC_OBJ_L4CACHE */  6,
-    /* next entry is HWLOC_OBJ_L5CACHE */  5,
-    /* next entry is HWLOC_OBJ_L1ICACHE */ 12,
-    /* next entry is HWLOC_OBJ_L2ICACHE */ 10,
-    /* next entry is HWLOC_OBJ_L3ICACHE */ 8,
+    /* next entry is HWLOC_OBJ_CORE */     14,
+    /* next entry is HWLOC_OBJ_PU */       18,
+    /* next entry is HWLOC_OBJ_L1CACHE */  12,
+    /* next entry is HWLOC_OBJ_L2CACHE */  10,
+    /* next entry is HWLOC_OBJ_L3CACHE */  8,
+    /* next entry is HWLOC_OBJ_L4CACHE */  7,
+    /* next entry is HWLOC_OBJ_L5CACHE */  6,
+    /* next entry is HWLOC_OBJ_L1ICACHE */ 13,
+    /* next entry is HWLOC_OBJ_L2ICACHE */ 11,
+    /* next entry is HWLOC_OBJ_L3ICACHE */ 9,
     /* next entry is HWLOC_OBJ_GROUP */    1,
     /* next entry is HWLOC_OBJ_NUMANODE */ 3,
-    /* next entry is HWLOC_OBJ_BRIDGE */   14,
-    /* next entry is HWLOC_OBJ_PCI_DEVICE */  15,
-    /* next entry is HWLOC_OBJ_OS_DEVICE */   16,
-    /* next entry is HWLOC_OBJ_MISC */     18,
-    /* next entry is HWLOC_OBJ_MEMCACHE */ 2
+    /* next entry is HWLOC_OBJ_BRIDGE */   15,
+    /* next entry is HWLOC_OBJ_PCI_DEVICE */  16,
+    /* next entry is HWLOC_OBJ_OS_DEVICE */   17,
+    /* next entry is HWLOC_OBJ_MISC */     19,
+    /* next entry is HWLOC_OBJ_MEMCACHE */ 2,
+    /* next entry is HWLOC_OBJ_DIE */      5
 };
 
 #ifndef NDEBUG /* only used in debug check assert if !NDEBUG */
@@ -1030,6 +1031,7 @@ static const hwloc_obj_type_t obj_order_type[] = {
   HWLOC_OBJ_MEMCACHE,
   HWLOC_OBJ_NUMANODE,
   HWLOC_OBJ_PACKAGE,
+  HWLOC_OBJ_DIE,
   HWLOC_OBJ_L5CACHE,
   HWLOC_OBJ_L4CACHE,
   HWLOC_OBJ_L3CACHE,
@@ -1054,6 +1056,7 @@ static const hwloc_obj_type_t obj_order_type[] = {
  * Always keep Machine/NUMANode/PU/PCIDev/OSDev
  * then Core
  * then Package
+ * then Die
  * then Cache,
  * then Instruction Caches
  * then always drop Group/Misc/Bridge.
@@ -1080,7 +1083,8 @@ static const int obj_type_priority[] = {
   /* next entry is HWLOC_OBJ_PCI_DEVICE */  100,
   /* next entry is HWLOC_OBJ_OS_DEVICE */   100,
   /* next entry is HWLOC_OBJ_MISC */        0,
-  /* next entry is HWLOC_OBJ_MEMCACHE */    19
+  /* next entry is HWLOC_OBJ_MEMCACHE */    19,
+  /* next entry is HWLOC_OBJ_DIE */         30
 };
 
 int hwloc_compare_types (hwloc_obj_type_t type1, hwloc_obj_type_t type2)
@@ -2304,6 +2308,7 @@ hwloc_reset_normal_type_depths(hwloc_topology_t topology)
   for (i=HWLOC_OBJ_TYPE_MIN; i<=HWLOC_OBJ_GROUP; i++)
     topology->type_depth[i] = HWLOC_TYPE_DEPTH_UNKNOWN;
   /* type contiguity is asserted in topology_check() */
+  topology->type_depth[HWLOC_OBJ_DIE] = HWLOC_TYPE_DEPTH_UNKNOWN;
 }
 
 static int
@@ -3466,7 +3471,7 @@ hwloc__topology_init (struct hwloc_topology **topologyp,
   topology->support.cpubind = hwloc_tma_malloc(tma, sizeof(*topology->support.cpubind));
   topology->support.membind = hwloc_tma_malloc(tma, sizeof(*topology->support.membind));
 
-  topology->nb_levels_allocated = nblevels; /* enough for default 9 levels = Mach+Pack+NUMA+L3+L2+L1d+L1i+Co+PU */
+  topology->nb_levels_allocated = nblevels; /* enough for default 10 levels = Mach+Pack+Die+NUMA+L3+L2+L1d+L1i+Co+PU */
   topology->levels = hwloc_tma_calloc(tma, topology->nb_levels_allocated * sizeof(*topology->levels));
   topology->level_nbobjects = hwloc_tma_calloc(tma, topology->nb_levels_allocated * sizeof(*topology->level_nbobjects));
 
@@ -3489,7 +3494,7 @@ int
 hwloc_topology_init (struct hwloc_topology **topologyp)
 {
   return hwloc__topology_init(topologyp,
-			      16, /* 16 is enough for default 9 levels = Mach+Pack+NUMA+L3+L2+L1d+L1i+Co+PU */
+			      16, /* 16 is enough for default 10 levels = Mach+Pack+Die+NUMA+L3+L2+L1d+L1i+Co+PU */
 			      NULL); /* no TMA for normal topologies, too many allocations to fix */
 }
 
@@ -4704,7 +4709,8 @@ hwloc_topology_check(struct hwloc_topology *topology)
   HWLOC_BUILD_ASSERT(HWLOC_OBJ_PCI_DEVICE + 1 == HWLOC_OBJ_OS_DEVICE);
   HWLOC_BUILD_ASSERT(HWLOC_OBJ_OS_DEVICE  + 1 == HWLOC_OBJ_MISC);
   HWLOC_BUILD_ASSERT(HWLOC_OBJ_MISC       + 1 == HWLOC_OBJ_MEMCACHE);
-  HWLOC_BUILD_ASSERT(HWLOC_OBJ_MEMCACHE   + 1 == HWLOC_OBJ_TYPE_MAX);
+  HWLOC_BUILD_ASSERT(HWLOC_OBJ_MEMCACHE   + 1 == HWLOC_OBJ_DIE);
+  HWLOC_BUILD_ASSERT(HWLOC_OBJ_DIE        + 1 == HWLOC_OBJ_TYPE_MAX);
 
   /* make sure order and priority arrays have the right size */
   HWLOC_BUILD_ASSERT(sizeof(obj_type_order)/sizeof(*obj_type_order) == HWLOC_OBJ_TYPE_MAX);
