@@ -43,30 +43,30 @@ int main(void)
      * HWLOC_TOPOLOGY_ABI must be bumped when updating these checks.
      *******************************************************************/
 
-    HWLOC_BUILD_ASSERT(HWLOC_OBJ_TYPE_MAX == 19);
+    HWLOC_BUILD_ASSERT(HWLOC_OBJ_TYPE_MAX == 20);
     HWLOC_BUILD_ASSERT(HWLOC_NR_SLEVELS == 6);
 
     offset = offsetof(struct hwloc_topology, topology_abi);
     assert(offset == 0);
 
     offset = offsetof(struct hwloc_topology, adopted_shmem_addr);
-    assert(offset == 224);
+    assert(offset == 232);
 
     offset = offsetof(struct hwloc_topology, binding_hooks);
-    assert(offset == 448);
+    assert(offset == 456);
     size = sizeof(struct hwloc_binding_hooks);
     assert(size == 192);
 
     offset = offsetof(struct hwloc_topology, support);
-    assert(offset == 640);
+    assert(offset == 648);
 
     offset = offsetof(struct hwloc_topology, first_dist);
-    assert(offset == 688);
+    assert(offset == 696);
     size = sizeof(struct hwloc_internal_distances_s);
     assert(size == 64);
 
     offset = offsetof(struct hwloc_topology, grouping_next_subkind);
-    assert(offset == 740);
+    assert(offset == 748);
 
     /* fields after this one aren't needed after discovery */
 
